--- a/index.html
+++ b/index.html
@@ -28,9 +28,8 @@
             <h3 >I'm a <span id="typing"></span></h3>
             <p>I am a Full-Stack Developer who builds smooth frontends, powerful backends, and occasionally questions my life choices when debugging. Let’s create something awesome—before AI takes my job!</p>
             <div class="social-icons">
-                <a href="linkedin.com"><i class="fa-brands fa-linkedin"></i></a>
-                <a href="#"><i class="fa-brands fa-github"></i></a>
-                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/in/syed-shafi-491b25342/"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://github.com/smd-shafi/smd-shafi"><i class="fa-brands fa-github"></i></a>
             </div>
             <a href="#" class="btn">Hire me</a>
         </div>
