--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <a href="https://www.linkedin.com/in/syed-shafi-491b25342/"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="https://github.com/smd-shafi/smd-shafi"><i class="fa-brands fa-github"></i></a>
             </div>
-            <a href="#" class="btn">Hire me</a>
+            <a href="mailto:shafimahammed98@gmail.com?subject=Hiring Inquiry"" class="btn">Hire me</a>
         </div>
     </section>
 
