--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href="#projects" >Projects</a>
             <a href="#skills" >Skills</a>
             <a href="#contact" id="contact-btn">Contact</a>
-            <img src="/menu.svg" alt="Image">
+            <img src="menu.svg" alt="Image">
         </nav>
     </header>
     <section class="home">
